# Last_try_or_die_diploma

./: README.md
fake_api_gateway/: pyproject.toml
fake_api_gateway/src/fake_api_gateway/: instuctions.txt  main.py  test_api.sh
project/: .env  README.md
project/src/project/: config.py  create_content.py  database.py  main.py  models.py  redis_queue.py  requirements.txt  send_notification.py  worker.py
