[project]
name = "fake-api-gateway"
version = "0.1.0"
description = ""
authors = [
    {name = "goshmak",email = "gosh.maksimov2017@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)"
]

[tool.poetry]
packages = [{include = "fake_api_gateway", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
